# gen_lambda

./: .gitignore  pyproject.toml  requirements.txt
src/pub_lambda/: app.py  create_lambda.py
templates/nodejs22.x/infra/: main.tf
templates/nodejs22.x/src/: lambda.ts
templates/python3.11/: lambda_function.py
templates/python3.11/infra/: main.tf  variables.tf
